<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_call_us"
        android:icon="@drawable/ic_call_white_24dp"
        app:showAsAction="never"
        android:title="@string/str_call_us" />
    <item
        android:id="@+id/menu_service_issue"
        android:icon="@drawable/icon_message"
        app:showAsAction="never"

        android:title="@string/str_service_issue" />
    <item
        android:id="@+id/menu_service_history"
        android:icon="@drawable/icon_complain"
        app:showAsAction="never"

        android:title="@string/str_service_history" />
    <item android:title="."
        android:icon="@drawable/ic_call_white_24dp"
        app:showAsAction="never"

        android:iconTint="@android:color/white"/>

</menu>