<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/menuServiceHistoru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/home_menu_bg"
        android:orientation="vertical"

        android:paddingTop="16dp"

        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/callMenu"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_call_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/str_call_us"

                android:textColor="@color/text_color_grey" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/menuServiceIssue"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_service_issue_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/str_service_issue"

                android:textColor="@color/text_color_grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="?attr/selectableItemBackground"

            android:foreground="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_service_history_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/str_service_history"

                android:textColor="@color/text_color_grey" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
